// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb"
  id={null}
  rows={null}
>
  <div />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 klTivC"
    href={null}
    id="storyshots_109"
    media="https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
    onClick={[Function]}
  >
    <section
      className="Media__MediaContainer-sc-1ofqnpx-0 deYKND Card__CardMedia-sc-1g3s676-2 bYuQMc"
      id="storyshots_109-Media"
      onClick={null}
    >
      <img
        alt="Media Description"
        className="Image__ImageWrapper-sc-18abvff-0 hXzVKy Media__ImageWrapper-sc-1ofqnpx-1 iIUijx"
        onClick={null}
        src="https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
        title="Media Description"
        width="100%"
      />
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_109-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 boCGaE"
        >
          <div
            className="Avatar__TagContainer-sc-1vuf9om-2 gCneCZ"
            id={null}
            onClick={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-bookmark fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 lhHlxO"
              color={null}
              data-icon="bookmark"
              data-prefix="fas"
              focusable="false"
              fontSize="0.875em"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 384 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 512V48C0 21.49 21.49 0 48 0h288c26.51 0 48 21.49 48 48v464L192 400 0 512z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__Slot-icfo76-1 yvaBx"
        >
          <a
            className="Card__LinkedWrapper-sc-1g3s676-0 bKLMdk"
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 hSytIY"
              fontSize="1.15em"
              fontWeight={600}
              letterSpacing="0px"
            >
              Card Title
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 iHWhme"
              fontSize="0.879em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              Card Description
            </p>
          </a>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_109-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 iHWhme"
        fontSize="0.879em"
        fontWeight={400}
        id={null}
        letterSpacing="0.2px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 dQRyvT"
      id="storyshots_109-Footer"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bHddGh"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 jYxPQo"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 jYxPQo"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <div
            className="Menu__MenuContainer-sc-17iwn6x-0 hmdtNM"
            onClick={[Function]}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 hfqojg"
              disabled={false}
              htmlFor={null}
              id={null}
              name={null}
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
                id={null}
                rows={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                  color={null}
                  data-icon="ellipsis-v"
                  data-prefix="far"
                  focusable="false"
                  fontSize="inherit"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 128 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </section>
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div />
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cCcBKL Card__CardGridWrapper-sc-1g3s676-4 dmLEZX"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_110"
    media=""
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_111"
    media=""
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_111-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <h5
            className="Typography__TitleText-sc-19auepv-2 hSytIY"
            fontSize="1.15em"
            fontWeight={600}
            letterSpacing="0px"
          >
            Card Title
          </h5>
          <p
            className="Typography__Paragraph-sc-19auepv-3 iHWhme"
            fontSize="0.879em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            Card Description
          </p>
        </div>
      </div>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_112"
    media=""
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_112-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <h5
            className="Typography__TitleText-sc-19auepv-2 hSytIY"
            fontSize="1.15em"
            fontWeight={600}
            letterSpacing="0px"
          >
            Card Title
          </h5>
          <p
            className="Typography__Paragraph-sc-19auepv-3 iHWhme"
            fontSize="0.879em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            Card Description
          </p>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_112-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 iHWhme"
        fontSize="0.879em"
        fontWeight={400}
        id={null}
        letterSpacing="0.2px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_113"
    media=""
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_113-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 boCGaE"
        >
          <div
            className="Avatar__TagContainer-sc-1vuf9om-2 gCneCZ"
            id={null}
            onClick={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 gDyDyY Avatar__AvatarText-sc-1vuf9om-0 bXQPOo"
              fontSize="1em"
              fontWeight={400}
              letterSpacing="0px"
            >
              GP
            </h6>
          </div>
        </div>
        <div
          className="Bar__Slot-icfo76-1 yvaBx"
        >
          <h5
            className="Typography__TitleText-sc-19auepv-2 hSytIY"
            fontSize="1.15em"
            fontWeight={600}
            letterSpacing="0px"
          >
            Card Title
          </h5>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_113-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 iHWhme"
        fontSize="0.879em"
        fontWeight={400}
        id={null}
        letterSpacing="0.2px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_114"
    media=""
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_114-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 boCGaE"
        >
          <div
            className="Avatar__TagContainer-sc-1vuf9om-2 gCneCZ"
            id={null}
            onClick={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-star fa-w-18 Icon__StyledIcon-sc-1oa9m1v-1 lhHlxO"
              color={null}
              data-icon="star"
              data-prefix="far"
              focusable="false"
              fontSize="0.875em"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 576 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__Slot-icfo76-1 yvaBx"
        >
          <h5
            className="Typography__TitleText-sc-19auepv-2 hSytIY"
            fontSize="1.15em"
            fontWeight={600}
            letterSpacing="0px"
          >
            Card Title
          </h5>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_114-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 iHWhme"
        fontSize="0.879em"
        fontWeight={400}
        id={null}
        letterSpacing="0.2px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_115"
    media=""
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_115-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <h5
            className="Typography__TitleText-sc-19auepv-2 hSytIY"
            fontSize="1.15em"
            fontWeight={600}
            letterSpacing="0px"
          >
            Card Title
          </h5>
          <p
            className="Typography__Paragraph-sc-19auepv-3 iHWhme"
            fontSize="0.879em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            Card Description
          </p>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_115-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 iHWhme"
        fontSize="0.879em"
        fontWeight={400}
        id={null}
        letterSpacing="0.2px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 dQRyvT"
      id="storyshots_115-Footer"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bHddGh"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 jYxPQo"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 jYxPQo"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <span>
             
          </span>
        </div>
      </div>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 klTivC"
    href={null}
    id="storyshots_116"
    media=""
    onClick={[Function]}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_116-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <a
            className="Card__LinkedWrapper-sc-1g3s676-0 bKLMdk"
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 hSytIY"
              fontSize="1.15em"
              fontWeight={600}
              letterSpacing="0px"
            >
              Card Title
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 iHWhme"
              fontSize="0.879em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              Card Description
            </p>
          </a>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_116-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 iHWhme"
        fontSize="0.879em"
        fontWeight={400}
        id={null}
        letterSpacing="0.2px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 dQRyvT"
      id="storyshots_116-Footer"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bHddGh"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 jYxPQo"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 jYxPQo"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <div
            className="Menu__MenuContainer-sc-17iwn6x-0 hmdtNM"
            onClick={[Function]}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 hfqojg"
              disabled={false}
              htmlFor={null}
              id={null}
              name={null}
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
                id={null}
                rows={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                  color={null}
                  data-icon="ellipsis-v"
                  data-prefix="far"
                  focusable="false"
                  fontSize="inherit"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 128 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </section>
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cCcBKL Card__CardGridWrapper-sc-1g3s676-4 dmLEZX"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 klTivC"
    href={null}
    id="storyshots_117"
    media="https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
    onClick={[Function]}
  >
    <section
      className="Media__MediaContainer-sc-1ofqnpx-0 deYKND Card__CardMedia-sc-1g3s676-2 bYuQMc"
      id="storyshots_117-Media"
      onClick={null}
    >
      <img
        alt="Media Description"
        className="Image__ImageWrapper-sc-18abvff-0 hXzVKy Media__ImageWrapper-sc-1ofqnpx-1 iIUijx"
        onClick={null}
        src="https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
        title="Media Description"
        width="100%"
      />
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_117-Header"
      onClick={null}
    >
      <div
        className="Expander__HeaderWrapper-sc-147204-0 insQpf"
        id={null}
        onClick={[Function]}
      >
        <div
          className="Bar__BarLayout-icfo76-2 eUVQsH"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fIRUJx"
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 hSytIY"
              fontSize="1.15em"
              fontWeight={600}
              letterSpacing="0px"
            >
              Card Title
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 iHWhme"
              fontSize="0.879em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              Card Description
            </p>
          </div>
          <div
            className="Bar__Slot-icfo76-1 cxljst"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-angle-down fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 cjfaMb"
              color={null}
              data-icon="angle-down"
              data-prefix="far"
              focusable="false"
              fontSize="1.35em"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
        open={false}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 icvNFT"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
              fontSize="0.879em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0.4px"
            >
              Button
            </label>
          </section>
        </button>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_117-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 iHWhme"
        fontSize="0.879em"
        fontWeight={400}
        id={null}
        letterSpacing="0.2px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 dQRyvT"
      id="storyshots_117-Footer"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bHddGh"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 jYxPQo"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 jYxPQo"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <div
            className="Menu__MenuContainer-sc-17iwn6x-0 hmdtNM"
            onClick={[Function]}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 hfqojg"
              disabled={false}
              htmlFor={null}
              id={null}
              name={null}
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
                id={null}
                rows={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                  color={null}
                  data-icon="ellipsis-v"
                  data-prefix="far"
                  focusable="false"
                  fontSize="inherit"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 128 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </section>
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 klTivC"
    href={null}
    id="storyshots_118"
    media="https://player.vimeo.com/video/798022"
    onClick={[Function]}
  >
    <section
      className="Media__MediaContainer-sc-1ofqnpx-0 deYKND Card__CardMedia-sc-1g3s676-2 bYuQMc"
      id="storyshots_118-Media"
      onClick={null}
    >
      <iframe
        allow="fullscreen"
        allowFullScreen={true}
        className="Media__Frame-sc-1ofqnpx-4 dkKlmr"
        frameBorder="0"
        height="100vh"
        src="https://player.vimeo.com/video/798022"
        title="iframe"
        width="100%"
      />
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_118-Header"
      onClick={null}
    >
      <div
        className="Expander__HeaderWrapper-sc-147204-0 insQpf"
        id={null}
        onClick={[Function]}
      >
        <div
          className="Bar__BarLayout-icfo76-2 eUVQsH"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fIRUJx"
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 hSytIY"
              fontSize="1.15em"
              fontWeight={600}
              letterSpacing="0px"
            >
              Card Title
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 iHWhme"
              fontSize="0.879em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              Card Description
            </p>
          </div>
          <div
            className="Bar__Slot-icfo76-1 cxljst"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-angle-down fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 cjfaMb"
              color={null}
              data-icon="angle-down"
              data-prefix="far"
              focusable="false"
              fontSize="1.35em"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
        open={false}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 icvNFT"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
              fontSize="0.879em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0.4px"
            >
              Button
            </label>
          </section>
        </button>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_118-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 iHWhme"
        fontSize="0.879em"
        fontWeight={400}
        id={null}
        letterSpacing="0.2px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 dQRyvT"
      id="storyshots_118-Footer"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bHddGh"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 jYxPQo"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 jYxPQo"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <div
            className="Menu__MenuContainer-sc-17iwn6x-0 hmdtNM"
            onClick={[Function]}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 hfqojg"
              disabled={false}
              htmlFor={null}
              id={null}
              name={null}
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
                id={null}
                rows={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                  color={null}
                  data-icon="ellipsis-v"
                  data-prefix="far"
                  focusable="false"
                  fontSize="inherit"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 128 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </section>
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 klTivC"
    href={null}
    id="storyshots_119"
    media="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4"
    onClick={[Function]}
  >
    <section
      className="Media__MediaContainer-sc-1ofqnpx-0 deYKND Card__CardMedia-sc-1g3s676-2 bYuQMc"
      id="storyshots_119-Media"
      onClick={null}
    >
      <video
        className="Media__Video-sc-1ofqnpx-3 imikFd"
        controls={true}
        title="video/mp4"
        width="100%"
      >
        <source
          src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4"
          type="video/mp4"
        />
        Your browser does not support the video element.
      </video>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_119-Header"
      onClick={null}
    >
      <div
        className="Expander__HeaderWrapper-sc-147204-0 insQpf"
        id={null}
        onClick={[Function]}
      >
        <div
          className="Bar__BarLayout-icfo76-2 eUVQsH"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fIRUJx"
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 hSytIY"
              fontSize="1.15em"
              fontWeight={600}
              letterSpacing="0px"
            >
              Card Title
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 iHWhme"
              fontSize="0.879em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              Card Description
            </p>
          </div>
          <div
            className="Bar__Slot-icfo76-1 cxljst"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-angle-down fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 cjfaMb"
              color={null}
              data-icon="angle-down"
              data-prefix="far"
              focusable="false"
              fontSize="1.35em"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
        open={false}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 icvNFT"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
              fontSize="0.879em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0.4px"
            >
              Button
            </label>
          </section>
        </button>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_119-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 iHWhme"
        fontSize="0.879em"
        fontWeight={400}
        id={null}
        letterSpacing="0.2px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 dQRyvT"
      id="storyshots_119-Footer"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bHddGh"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 jYxPQo"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 jYxPQo"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <div
            className="Menu__MenuContainer-sc-17iwn6x-0 hmdtNM"
            onClick={[Function]}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 hfqojg"
              disabled={false}
              htmlFor={null}
              id={null}
              name={null}
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
                id={null}
                rows={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                  color={null}
                  data-icon="ellipsis-v"
                  data-prefix="far"
                  focusable="false"
                  fontSize="inherit"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 128 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </section>
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 klTivC"
    href={null}
    id="storyshots_120"
    media="https://www.youtube.com/embed/GJVwbyAY4Sk?autoplay=0"
    onClick={[Function]}
  >
    <section
      className="Media__MediaContainer-sc-1ofqnpx-0 deYKND Card__CardMedia-sc-1g3s676-2 bYuQMc"
      id="storyshots_120-Media"
      onClick={null}
    >
      <iframe
        allow="fullscreen"
        allowFullScreen={true}
        className="Media__Frame-sc-1ofqnpx-4 dkKlmr"
        frameBorder="0"
        height="100vh"
        src="https://www.youtube.com/embed/GJVwbyAY4Sk?autoplay=0"
        title="iframe"
        width="100%"
      />
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_120-Header"
      onClick={null}
    >
      <div
        className="Expander__HeaderWrapper-sc-147204-0 insQpf"
        id={null}
        onClick={[Function]}
      >
        <div
          className="Bar__BarLayout-icfo76-2 eUVQsH"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fIRUJx"
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 hSytIY"
              fontSize="1.15em"
              fontWeight={600}
              letterSpacing="0px"
            >
              Card Title
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 iHWhme"
              fontSize="0.879em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              Card Description
            </p>
          </div>
          <div
            className="Bar__Slot-icfo76-1 cxljst"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-angle-down fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 cjfaMb"
              color={null}
              data-icon="angle-down"
              data-prefix="far"
              focusable="false"
              fontSize="1.35em"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
        open={false}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 icvNFT"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
              fontSize="0.879em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0.4px"
            >
              Button
            </label>
          </section>
        </button>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_120-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 iHWhme"
        fontSize="0.879em"
        fontWeight={400}
        id={null}
        letterSpacing="0.2px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 dQRyvT"
      id="storyshots_120-Footer"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bHddGh"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 jYxPQo"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 jYxPQo"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <div
            className="Menu__MenuContainer-sc-17iwn6x-0 hmdtNM"
            onClick={[Function]}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 hfqojg"
              disabled={false}
              htmlFor={null}
              id={null}
              name={null}
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
                id={null}
                rows={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                  color={null}
                  data-icon="ellipsis-v"
                  data-prefix="far"
                  focusable="false"
                  fontSize="inherit"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 128 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </section>
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 klTivC"
    href={null}
    id="storyshots_121"
    media="https://www.w3schools.com/html/horse.mp3"
    onClick={[Function]}
  >
    <section
      className="Media__MediaContainer-sc-1ofqnpx-0 deYKND Card__CardMedia-sc-1g3s676-2 bYuQMc"
      id="storyshots_121-Media"
      onClick={null}
    >
      <audio
        className="Media__Audio-sc-1ofqnpx-2 hTgoaP"
        controls={true}
        title="audio/mpeg"
      >
        <source
          src="https://www.w3schools.com/html/horse.mp3"
          type="audio/mpeg"
        />
        Your browser does not support the audio element.
      </audio>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_121-Header"
      onClick={null}
    >
      <div
        className="Expander__HeaderWrapper-sc-147204-0 insQpf"
        id={null}
        onClick={[Function]}
      >
        <div
          className="Bar__BarLayout-icfo76-2 eUVQsH"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fIRUJx"
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 hSytIY"
              fontSize="1.15em"
              fontWeight={600}
              letterSpacing="0px"
            >
              Card Title
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 iHWhme"
              fontSize="0.879em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              Card Description
            </p>
          </div>
          <div
            className="Bar__Slot-icfo76-1 cxljst"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-angle-down fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 cjfaMb"
              color={null}
              data-icon="angle-down"
              data-prefix="far"
              focusable="false"
              fontSize="1.35em"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
        open={false}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 icvNFT"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
              fontSize="0.879em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0.4px"
            >
              Button
            </label>
          </section>
        </button>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kXhiBO"
      id="storyshots_121-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 iHWhme"
        fontSize="0.879em"
        fontWeight={400}
        id={null}
        letterSpacing="0.2px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 dQRyvT"
      id="storyshots_121-Footer"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bHddGh"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 hTtmaE"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 jYxPQo"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                Command One
              </label>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 jYxPQo"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                Command Two
              </label>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-icfo76-1 ecRRXN"
        >
          <div
            className="Menu__MenuContainer-sc-17iwn6x-0 hmdtNM"
            onClick={[Function]}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 hfqojg"
              disabled={false}
              htmlFor={null}
              id={null}
              name={null}
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
                id={null}
                rows={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                  color={null}
                  data-icon="ellipsis-v"
                  data-prefix="far"
                  focusable="false"
                  fontSize="inherit"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 128 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </section>
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
</section>
`;
